--- a/src/pages/committees/committees.scss
+++ b/src/pages/committees/committees.scss
@@ -1,20 +1,47 @@
-
-
-.worldMap {
-    border: 1px solid black;
-    height: min-content;
-    width: max-content;
+.committeesPageContainer {
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+    height: 100vh;
+
+    .committeesPageGrid {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: 50vh auto auto auto auto auto auto;
+        margin-top: 15vh;
+        border: 1px solid black;
+
+        .centerPage {
+            display: flex;
+            // justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            width: 1220px;
+
+            .worldMapContainer {
+                height: min-content;
+                width: max-content;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 50px;
+
+                animation: mapFadeIn 3s ease-in 0s 1 forwards forwards;
+            }
+
+            .contentContainer {
+                margin-top: 100px;
+                border: 1px solid black;
+                width: 1000px;
+            }
+        }
+    }
 }
 
-.centerPage {
-    border: 1px solid black;
-
-    display: flex;
-    justify-content: center;
-
-    width: 1220px;
+@keyframes mapFadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
