--- a/src/pages/committees/world-map-styles.scss
+++ b/src/pages/committees/world-map-styles.scss
@@ -1,53 +1,68 @@
 .EMROg {
-    transition: all 0.3s;
-    transform-origin: 50% 50%;
+  transition: all 0.3s;
+  transform-origin: 50% 50%;
 }
 
 .EMROg:hover {
-    transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 .AFROg {
-    transition: all 0.3s;
-    transform-origin: 50% 50%;
+  transition: all 0.3s;
+  transform-origin: 50% 50%;
 }
 
 .AFROg:hover {
-    transform: scale(1.015);
+  transform: scale(1.015);
 }
 
 .EUROg {
-    transition: all 0.3s;
-    transform-origin: 50% 50%;
+  transition: all 0.3s;
+  transform-origin: 50% 50%;
 }
 
 .EUROg:hover {
-    transform: scale(1.01);
+  transform: scale(1.01);
 }
 
 .AMROg {
-    transition: all 0.3s;
-    transform-origin: 50% 50%;
+  transition: all 0.3s;
+  transform-origin: 50% 50%;
 }
 
 .AMROg:hover {
-    transform: scale(1.01);
+  transform: scale(1.01);
 }
 
 .SEAROg {
-    transition: all 0.3s;
-    transform-origin: 50% 50%;
+  transition: all 0.3s;
+  transform-origin: 50% 50%;
 }
 
 .SEAROg:hover {
-    transform: scale(1.01);
+  transform: scale(1.01);
 }
 
 .WPROg {
-    transition: all 0.3s;
-    transform-origin: 50% 50%;
+  transition: all 0.3s;
+  transform-origin: 50% 50%;
 }
 
 .WPROg:hover {
-    transform: scale(1.01);
+  transform: scale(1.01);
+}
+
+.worldMap {
+  animation: mapFadeIn 1s ease 0s 1 normal forwards;
+}
+
+@keyframes mapFadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1.5);
+  }
 }
