--- a/src/pages/login/components/navbar/navbar-component.scss
+++ b/src/pages/login/components/navbar/navbar-component.scss
@@ -1,81 +1,97 @@
 .nav-bar-component {
-    display: flex;
-    align-items: center;
-    height: 100px;
-    position: absolute;
-    width: 100vw;
-    top: -100px;
-    transition: top 1s;
-    transition-timing-function: ease-out;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  align-items: center;
+  height: 100px;
+  position: absolute;
+  width: 100vw;
+  top: -100px;
+  transition: top 1s;
+  transition-timing-function: ease-out;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-    .nav-bar-container-grid {
-        display: grid;
-        grid-template-columns: 1fr 4fr;
-        // border: 2px solid red;
-        width: 100%;
+  .nav-bar-container-grid {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    // border: 2px solid red;
+    width: 100%;
 
-        .nav-bar-logo-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            // border: 2px solid black;
-            // max-width: 200px;
+    .nav-bar-logo-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // border: 2px solid black;
+      // max-width: 200px;
 
-            .nav-bar-logo {
-                max-width: 100px;
-                max-height: 100px;
-            }
-        }
-
-        .nav-bar-flex-container {
-            display: flex;
-            // justify-content: center;
-            .nav-bar-buttons-container {
-                display: flex;
-                // align-items: center;
-                justify-content: flex-end;
-                // border: 2px solid black;
-            }
-        }
+      .nav-bar-logo {
+        max-width: 100px;
+        max-height: 100px;
+      }
     }
 
-    .nav-bar-container {
-        display: grid;
-        grid-template-columns: 20vw 80vw;
-
-        .nav-bar-grid-item {
-            height: max-content;
-        }
+    .nav-bar-flex-container {
+      display: flex;
+      // justify-content: center;
+      .nav-bar-buttons-container {
+        display: flex;
+        // align-items: center;
+        justify-content: flex-end;
+        // border: 2px solid black;
+      }
     }
+  }
+
+  .nav-bar-container {
+    display: grid;
+    grid-template-columns: 20vw 80vw;
+
+    .nav-bar-grid-item {
+      height: max-content;
+    }
+  }
 }
 
 .nav-bar-active {
-    top: 0px;
+  top: 0px;
 }
 
 .nav-bar-btn {
-    cursor: pointer;
-    // border: 1px solid black;
-    border: none;
-    border-radius: 0;
-    background: none;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 600;
-    color: black;
-    transition: all 0.5s;
-    padding-top: 20px;
+  cursor: pointer;
+  border: none;
+  border-radius: 0;
+  background: none;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 600;
+  color: black;
+  transition: all 0.5s;
+  padding-top: 20px;
 
-    width: 150px;
-    height: 80px;
+  width: 150px;
+  height: 80px;
 }
 
 .nav-bar-btn:hover {
-    color: gold;
+  color: gold;
+}
+
+.nav-bar-component-mobile {
+  display: flex;
+  align-items: center;
+  height: 5vh;
+  position: absolute;
+  width: 100vw;
+  top: -100px;
+  transition: top 1s;
+  transition-timing-function: ease-out;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.nav-bar-active-mobile {
+  top: 0px;
 }
 
 .debug {
-    // border: 1px solid black;
+  // border: 1px solid black;
 }
