--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,111 +1,194 @@
 .header-container {
-    grid-area: 1 / 1 / span 1 / span 2;
+  grid-area: 1 / 1 / span 1 / span 2;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    padding: 0px;
-    margin: 0px;
+  font-family: Arial, sans-serif;
+  padding: 0px;
+  margin: 0px;
 }
 
-.page-grid-container {
-    display: grid;
-    grid-template-rows: 80vh 100vh 100vh;
-    // background-image: url('./../../assets/ClujWhoBackground.png'), url('./../../assets/ClujWhoBackground.png');
-    // background-repeat: repeat;
-    // background-size: 50%;
-}
+.homePageGridContainer {
+  display: grid;
+  grid-template-rows: auto 100vh 100vh;
+  background-image: url('./../../assets/ClujWhoBackground.png');
+  background-repeat: repeat;
+  background-size: 50%;
 
-.backgroud-image {
-    background-image: url('./../../assets/ClujWhoBackground.png');
-    background-repeat: repeat;
-    background-size: 50%;
-    // opacity: 50%;
-}
-
-.title-tile {
+  .titleContainer {
     display: flex;
     justify-content: center;
-    padding-top: 10vh;
-    height: 80%;
-    width: 100%;
-
-    .title-grid-container {
-        display: grid;
-        grid-template-rows: 300px 100px 100px;
-
-        .tile-grid-item-container {
-            display: flex;
-            justify-content: center;
-            .logo {
-                width: 300px;
-                height: 300px;
-            }
-
-            .title-container {
-                position: relative;
-                bottom: 70px;
-                .title-flex-container {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    width: 80vw;
-                    .title {
-                        font-size: 90px;
-                        // font-weight: 600;
-                    }
-                }
-                .title {
-                    font-size: 7vh;
-                    // font-weight: 600;
-                    color: #008dc7;
-                }
-            }
+    // align-items: center;
+    .titleGrid {
+      display: grid;
+      grid-template-rows: auto 3vw 3vw;
+      .tileGridItem {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .logo {
+          width: 50vw;
+          height: 50vw;
+          max-width: 500px;
+          max-height: 500px;
         }
-    }
-}
+        .title {
+          font-size: 3vw;
+          color: #008dc7;
+        }
+        .message {
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
-.paper-flex {
+          font-size: 1.5vw;
+          color: #008dc7;
+        }
+      }
+    }
+  }
+  .paper-flex {
     display: flex;
     justify-content: center;
     .out-paper {
-        width: 1220px;
-        .in-paper {
-            height: 100vh;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+      width: 1220px;
+      .in-paper {
+        height: 100vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
 
-            .team-member-card-container {
-                padding: 10px;
-            }
+        .team-member-card-container {
+          padding: 10px;
         }
+      }
     }
+  }
 }
 
-.page-grid-item {
-    //   background-color: aqua;
-}
+@media only screen and (max-width: 600px) {
+  .homePageGridContainer {
+    display: grid;
+    grid-template-rows: auto 100vh 100vh;
+    background-image: url('./../../assets/ClujWhoBackground.png');
+    background-repeat: repeat;
+    background-size: 50%;
 
-.nav-bar-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
+    .titleContainer {
+      display: flex;
+      justify-content: center;
 
-.nav-bar-active {
-    animation-name: slide-down;
-    animation-duration: 4s;
-}
-
-@keyframes slide-down {
-    0% {
-        top: -10;
+      .titleGrid {
+        margin-top: 10vh;
+        display: grid;
+        grid-template-rows: auto 3vw 3vw;
+        .tileGridItem {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .logo {
+            width: 70vw;
+            height: 70vw;
+            max-width: 500px;
+            max-height: 500px;
+          }
+          .title {
+            font-size: 5vw;
+            color: #008dc7;
+          }
+          .message {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2.5vw;
+            color: #008dc7;
+          }
+        }
+      }
     }
-    100% {
-        top: 100;
+
+    .paper-flex {
+      display: flex;
+      justify-content: center;
+      .out-paper {
+        width: 90vw;
+        .in-paper {
+          height: 100vh;
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+
+        
+        }
+      }
     }
+  }
 }
 
+
+
+.page-grid-container {
+  display: grid;
+  grid-template-rows: 80vh 100vh 100vh;
+  background-image: url('./../../assets/ClujWhoBackground.png');
+  background-repeat: repeat;
+  background-size: 50%;
+
+  .title-tile {
+    display: flex;
+    justify-content: center;
+    padding-top: 10vh;
+    height: 80vw;
+    width: 100vw;
+
+    .title-grid-container {
+      display: grid;
+      grid-template-rows: 18vw 6vw 6vw;
+
+      .tile-grid-item-container {
+        display: flex;
+        justify-content: center;
+        .logo {
+          width: 18vw;
+          height: 18vw;
+        }
+
+        .title-container {
+          position: relative;
+          bottom: 70px;
+          .title-flex-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 80vw;
+            .title {
+              font-size: 90px;
+            }
+          }
+          .title {
+            font-size: 7vh;
+            color: #008dc7;
+          }
+        }
+      }
+    }
+  }
+
+  .paper-flex {
+    display: flex;
+    justify-content: center;
+    .out-paper {
+      width: 1220px;
+      .in-paper {
+        height: 100vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        .team-member-card-container {
+          padding: 10px;
+        }
+      }
+    }
+  }
+}
 .debug {
-    // border: 1px solid black;
+  border: 1px solid black;
 }
