--- a/src/pages/appy-now/appy-now.scss
+++ b/src/pages/appy-now/appy-now.scss
@@ -1,99 +1,186 @@
 html,
 body {
-    margin: 0;
-    height: 100%;
-    overflow-x: hidden;
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 .backgroud-image {
-    background-image: url('./../../assets/ClujWhoBackground.png');
-    background-repeat: repeat;
-    background-size: 50%;
+  background-image: url('./../../assets/ClujWhoBackground.png');
+  background-repeat: repeat;
+  background-size: 50%;
 }
 
 .debug {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 .OxCenter {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .OyCenter {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .xOyCenter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .applyNowPageGridContainer {
+  display: flex;
+  justify-content: center;
+
+  .applyNowPageGrid {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 10vh 30vh 100vh;
+    margin-top: 20vh;
+
+    .titleContainer {
+      font-size: 50px;
+      margin: 0;
+      font-weight: 700;
+      color: #008dc7;
+    }
+
+    .countDownContainer {
+      .counterContainer {
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+        background-color: rgb(173, 216, 230);
+        border-radius: 20px;
+
+        .cardContainer {
+          margin-top: 20px;
+          display: grid;
+          grid-template-columns: auto;
+          grid-template-rows: auto auto;
+
+          .counterCard {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #72c2eb;
+            border-radius: 20px;
+            width: 150px;
+            height: 150px;
+            margin-left: 20px;
+            margin-right: 20px;
+
+            font-size: 100px;
+            color: white;
+          }
+
+          .cardLabel {
+            color: white;
+            font-size: 30px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+          }
+        }
+
+        .points {
+          font-size: 100px;
+          margin-bottom: 65px;
+          color: white;
+        }
+      }
+    }
+
+    .paperContainer {
+      .iframeContainer {
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .applyNowPageGridContainerMobile {
     display: flex;
     justify-content: center;
+    background-color: #4a5568;
+    border: 1px solid white;
 
     .applyNowPageGrid {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: 10vh 30vh 100vh;
-        margin-top: 20vh;
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-rows: 2vh 3vh 15vh 30vh 100vh;
+      margin-top: 6vh;
 
-        .titleContainer {
-            font-size: 50px;
-            margin: 0;
-            font-weight: 700;
-            color: #008dc7;
-        }
+      .titleContainer {
+        font-size: 5vw;
+        margin: 0;
+        font-weight: 700;
+        color: #bbc5d1;
+        filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
 
-        .countDownContainer {
-            .counterContainer {
-                display: grid;
-                grid-template-rows: auto;
-                grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
-                background-color: rgb(173, 216, 230);
-                border-radius: 20px;
+      }
 
-                .cardContainer {
-                    margin-top: 20px;
-                    display: grid;
-                    grid-template-columns: auto;
-                    grid-template-rows: auto auto;
+      .countDownContainer {
+        filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
+        
+        .counterContainer {
+          display: grid;
+          grid-template-rows: auto;
+          grid-template-columns: auto auto auto auto auto auto auto auto auto;
+          background-color: rgb(173, 216, 230);
+          border-radius: 3vw;
+          width: 95vw;
+          padding: 1vw;
 
-                    .counterCard {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        background-color: #72c2eb;
-                        border-radius: 20px;
-                        width: 150px;
-                        height: 150px;
-                        margin-left: 20px;
-                        margin-right: 20px;
+          .cardContainer {
+            margin-top: 1vh;
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto;
 
-                        font-size: 100px;
-                        color: white;
-                    }
+            .counterCard {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: #72c2eb;
+              border-radius: 0.1vw;
+              width: 15vw;
+              height: 15vw;
+              margin-left: 0.1vw;
+              margin-right: 0.1vw;
 
-                    .cardLabel {
-                        color: white;
-                        font-size: 30px;
-                        margin-top: 10px;
-                        margin-bottom: 10px;
-                    }
-                }
-
-                .points {
-                    font-size: 100px;
-                    margin-bottom: 65px;
-                    color: white;
-                }
+              font-size: 8vw;
+              color: white;
             }
-        }
 
-        .paperContainer {
-            .iframeContainer {
+            .cardLabel {
+              color: white;
+              font-size: 3.5vw;
+              margin-top: 0.1vh;
+              margin-bottom: 0.1vh;
             }
+          }
+
+          .points {
+            font-size: 8vw;
+            color: white;
+          }
         }
+      }
+
+      .paperContainer {
+        .iframeContainer {
+        }
+      }
     }
+  }
+}
+
+@keyframes mapFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
