--- a/src/pages/appy-now/appy-now.scss
+++ b/src/pages/appy-now/appy-now.scss
@@ -103,73 +103,77 @@ body {
     display: flex;
     justify-content: center;
     background-color: #4a5568;
-    border: 1px solid white;
+    // border: 1px solid white;
 
-    .applyNowPageGrid {
+    .applyNowPageGridMobile {
       display: grid;
       grid-template-columns: auto;
-      grid-template-rows: 2vh 3vh 15vh 30vh 100vh;
-      margin-top: 6vh;
+      grid-template-rows: 2vh 3vh 16vh 80vh 30vh ;
+      margin-top: 8vh;
 
-      .titleContainer {
+      .titleContainerMobile {
         font-size: 5vw;
         margin: 0;
         font-weight: 700;
-        color: #bbc5d1;
+        color: #d8e0e9;
         filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
-
       }
 
-      .countDownContainer {
+      .countDownContainerMobile {
         filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
-        
-        .counterContainer {
+
+        .counterContainerMobile {
           display: grid;
           grid-template-rows: auto;
-          grid-template-columns: auto auto auto auto auto auto auto auto auto;
+          grid-template-columns: auto 2vw auto 2vw auto 2vw auto 2vw auto;
           background-color: rgb(173, 216, 230);
           border-radius: 3vw;
           width: 95vw;
           padding: 1vw;
 
-          .cardContainer {
+          .cardContainerMobile {
             margin-top: 1vh;
             display: grid;
             grid-template-columns: auto;
             grid-template-rows: auto auto;
+            // border: 1px solid black;
 
-            .counterCard {
+            .counterCardMobile {
               display: flex;
               justify-content: center;
               align-items: center;
               background-color: #72c2eb;
-              border-radius: 0.1vw;
+              border-radius: 1vw;
               width: 15vw;
               height: 15vw;
-              margin-left: 0.1vw;
-              margin-right: 0.1vw;
-
-              font-size: 8vw;
+              font-size: 10vw;
+              font-weight: 600;
               color: white;
+              margin-left: auto;
+              margin-right: auto;
             }
 
-            .cardLabel {
+            .cardLabelMobile {
               color: white;
-              font-size: 3.5vw;
+              font-size: 3.4vw;
               margin-top: 0.1vh;
               margin-bottom: 0.1vh;
             }
           }
 
-          .points {
-            font-size: 8vw;
+          .pointsMobile {
+            font-size: 10vw;
             color: white;
+            margin-bottom: 2vh;
+            font-weight: 600;
+
           }
         }
       }
 
-      .paperContainer {
-        .iframeContainer {
+      .paperContainerMobile {
+          margin-top: 5vh;
+        .iframeContainerMobile {
         }
       }
     }
