--- a/src/pages/login/components/navbar/navbar-component.scss
+++ b/src/pages/login/components/navbar/navbar-component.scss
@@ -136,22 +136,22 @@
   overflow: visible;
 
   .menu-btn-list {
-    background-color: #718096;
+    background-color: #4a5568;
     height: 100vh;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    gap: 0.5vh;
-    padding: 0.5vh;
+    gap: 1vh;
+    padding: 1vh;
     .menu-list-item {
-      background-color: #4a5568;
+      background-color: #2d3848;
       border-radius: 1vh;
       width: 100%;
       height: 7vh;
 
       .menu-icon-btn {
-        color: rgb(245, 245, 245);
+        color: #bbc5d1;
         display: flex;
         justify-content: center;
         align-items: center;
