--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -66,41 +66,54 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-  .homePageGridContainer {
+  .homePageGridContainerMobile {
     display: grid;
     grid-template-rows: auto 100vh 100vh;
-    background-image: url('./../../assets/ClujWhoBackground.png');
-    background-repeat: repeat;
-    background-size: 50%;
+    background-color: #4a5568;
 
     .titleContainer {
       display: flex;
       justify-content: center;
 
       .titleGrid {
-        margin-top: 10vh;
+        margin-top: 7vh;
         display: grid;
-        grid-template-rows: auto 3vw 3vw;
-        .tileGridItem {
+        grid-template-rows: 50vw 10vw 6vw;
+
+        .logoContainer {
           display: flex;
           justify-content: center;
           align-items: center;
+          .logoBackground {
+            background-color: white;
+            border-radius: 25vw;
+            filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
+          }
           .logo {
-            width: 70vw;
-            height: 70vw;
+            width: 50vw;
+            height: 50vw;
             max-width: 500px;
             max-height: 500px;
           }
+        }
+        .tileGridItem {
+          display: flex;
+          justify-content: center;
+          // align-items: center;
+
           .title {
             font-size: 5vw;
-            color: #008dc7;
+            color: #dbe0e7;
+            filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
           }
           .message {
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 2.5vw;
-            color: #008dc7;
+            font-size: 3.5vw;
+            color: #dbe0e7;
+            font-weight: 700;
+            filter: drop-shadow(1vw 1vw 1vw rgb(43, 43, 43));
           }
         }
       }
@@ -110,20 +123,17 @@ body {
       display: flex;
       justify-content: center;
       .out-paper {
+        margin-top: 5vh;
         width: 90vw;
         .in-paper {
           height: 100vh;
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-
-        
+          display: flex;
+          justify-content: center;
         }
       }
     }
   }
 }
-
-
 
 .page-grid-container {
   display: grid;
@@ -165,7 +175,7 @@ body {
           }
           .title {
             font-size: 7vh;
-            color: #008dc7;
+            color: #bbc5d1;
           }
         }
       }
