--- a/src/pages/appy-now/appy-now.scss
+++ b/src/pages/appy-now/appy-now.scss
@@ -5,12 +5,6 @@ body {
   overflow-x: hidden;
 }
 
-.backgroud-image {
-  background-image: url('./../../assets/ClujWhoBackground.png');
-  background-repeat: repeat;
-  background-size: 50%;
-}
-
 .debug {
   border: 1px solid black;
 }
@@ -29,70 +23,83 @@ body {
   justify-content: center;
 }
 
-.applyNowPageGridContainer {
-  display: flex;
-  justify-content: center;
+@media only screen and (min-width: 600px) {
+  .backgroud-image {
+    background-image: url('./../../assets/ClujWhoBackground.png');
+    background-repeat: repeat;
+    background-size: 50%;
+    background-color: #4a5568;
+  }
 
-  .applyNowPageGrid {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 10vh 30vh 100vh;
-    margin-top: 20vh;
+  .applyNowPageGridContainer {
+    display: flex;
+    justify-content: center;
 
-    .titleContainer {
-      font-size: 50px;
-      margin: 0;
-      font-weight: 700;
-      color: #008dc7;
-    }
+    .applyNowPageGrid {
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-rows: 10vh 30vh 100vh;
+      margin-top: 10vh;
 
-    .countDownContainer {
-      .counterContainer {
-        display: grid;
-        grid-template-rows: auto;
-        grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
-        background-color: rgb(173, 216, 230);
-        border-radius: 20px;
+      .titleContainer {
+        font-size: 50px;
+        margin: 0;
+        font-weight: 700;
+        color: #cfd8e4;
+        filter: drop-shadow(0.5vh 0.5vh 0.5vh rgb(43, 43, 43));
+      }
 
-        .cardContainer {
-          margin-top: 20px;
+      .countDownContainer {
+        .counterContainer {
           display: grid;
-          grid-template-columns: auto;
-          grid-template-rows: auto auto;
+          grid-template-rows: auto;
+          grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+          background-color: rgb(173, 216, 230);
+          border-radius: 20px;
+          filter: drop-shadow(0.5vh 0.5vh 0.5vh rgb(43, 43, 43));
 
-          .counterCard {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #72c2eb;
-            border-radius: 20px;
-            width: 150px;
-            height: 150px;
-            margin-left: 20px;
-            margin-right: 20px;
+          .cardContainer {
+            margin-top: 20px;
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto;
 
+            .counterCard {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: #72c2eb;
+              border-radius: 20px;
+              width: 150px;
+              height: 150px;
+              margin-left: 20px;
+              margin-right: 20px;
+
+              font-size: 100px;
+              color: white;
+            }
+
+            .cardLabel {
+              color: white;
+              font-size: 30px;
+              margin-top: 10px;
+              margin-bottom: 10px;
+            }
+          }
+
+          .points {
             font-size: 100px;
+            margin-bottom: 65px;
             color: white;
           }
-
-          .cardLabel {
-            color: white;
-            font-size: 30px;
-            margin-top: 10px;
-            margin-bottom: 10px;
-          }
-        }
-
-        .points {
-          font-size: 100px;
-          margin-bottom: 65px;
-          color: white;
         }
       }
-    }
 
-    .paperContainer {
-      .iframeContainer {
+      .paperContainer {
+        width: 90vw;
+        max-width: 1280px;
+        .iframeContainer {
+        }
       }
     }
   }
@@ -108,7 +115,7 @@ body {
     .applyNowPageGridMobile {
       display: grid;
       grid-template-columns: auto;
-      grid-template-rows: 2vh 3vh 16vh 80vh 30vh ;
+      grid-template-rows: 2vh 3vh 16vh 80vh 30vh;
       margin-top: 8vh;
 
       .titleContainerMobile {
@@ -166,13 +173,12 @@ body {
             color: white;
             margin-bottom: 2vh;
             font-weight: 600;
-
           }
         }
       }
 
       .paperContainerMobile {
-          margin-top: 5vh;
+        margin-top: 5vh;
         .iframeContainerMobile {
         }
       }
