--- a/src/pages/login/components/navbar/navbar-component.scss
+++ b/src/pages/login/components/navbar/navbar-component.scss
@@ -1,78 +1,70 @@
 .nav-bar-component {
   display: flex;
   align-items: center;
-  height: 100px;
+  height: 7vh;
   position: absolute;
   width: 100vw;
   top: -100px;
   transition: top 1s;
   transition-timing-function: ease-out;
-  background-color: white;
+  background-color: #1a202c;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   .nav-bar-container-grid {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    // border: 2px solid red;
     width: 100%;
 
     .nav-bar-logo-container {
       display: flex;
-      justify-content: center;
       align-items: center;
-      // border: 2px solid black;
-      // max-width: 200px;
+      height: 7vh;
+      .iconContainer {
+        background-color: #bbc5d1;
+        border-radius: 50%;
+      }
+
+      .navBarTitle {
+        color: #bbc5d1;
+        font-size: 3vh;
+        font-weight: bold;
+        // margin: auto;
+        margin-left: 50px;
+        margin-right: 50px;
+      }
 
       .nav-bar-logo {
-        max-width: 100px;
-        max-height: 100px;
+        width: 7vh;
+        height: 7vh;
       }
     }
 
-    .nav-bar-flex-container {
+    .nav-bar-buttons-container {
       display: flex;
-      // justify-content: center;
-      .nav-bar-buttons-container {
-        display: flex;
-        // align-items: center;
-        justify-content: flex-end;
-        // border: 2px solid black;
+
+      .nav-bar-btn {
+        cursor: pointer;
+        border: none;
+        border-radius: 0;
+        background: none;
+        text-transform: uppercase;
+        font-size: 1.7vh;
+        font-weight: bold;
+        color: #bbc5d1;
+        transition: all 0.5s;
+        margin: auto;
+        letter-spacing: 0.2vh;
       }
-    }
-  }
 
-  .nav-bar-container {
-    display: grid;
-    grid-template-columns: 20vw 80vw;
-
-    .nav-bar-grid-item {
-      height: max-content;
+      .nav-bar-btn:hover {
+        color: gold;
+      }
     }
   }
 }
 
 .nav-bar-active {
   top: 0px;
-}
-
-.nav-bar-btn {
-  cursor: pointer;
-  border: none;
-  border-radius: 0;
-  background: none;
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 600;
-  color: black;
-  transition: all 0.5s;
-  padding-top: 20px;
-
-  width: 150px;
-  height: 80px;
-}
-
-.nav-bar-btn:hover {
-  color: gold;
 }
 
 .nav-bar-component-mobile {
