--- a/src/pages/committees/committees.scss
+++ b/src/pages/committees/committees.scss
@@ -19,13 +19,51 @@
     grid-template-rows: 60vh auto;
     grid-row-gap: 30px;
 
+    .committee-description-container {
+      padding: 15px;
+      font-size: 21px;
+
+      .AFRO-Title {
+        font-size: 3vh;
+        font-weight: 600;
+      }
+
+      .AFRO-first-paragraph {
+        padding-top: 10px;
+      }
+      .AFRO-image-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        .AFRO-Image {
+          padding-right: 20px;
+          padding-left: 20px;
+          padding-top: 10px;
+        }
+      }
+
+      .AFRO-bullet-point-list-container {
+        margin-top: 0px;
+        .AFRO-bullet-point-list-title {
+          margin-top: 5px;
+          margin-bottom: 5px;
+        }
+
+        .AFRO-bullet-point-list {
+          margin-top: 5px;
+          .AFRO-bullet-point-list-item {
+          }
+        }
+      }
+    }
+
     .committeesWroldMapContainerMobile {
       display: flex;
       justify-content: center;
       align-items: center;
       margin-top: 6vh;
       animation: mapFadeIn 3s ease-in 0s 1 forwards forwards;
-      border: 1px solid white;
+      // border: 1px solid white;
 
       .wordMapSvg {
         transform: scale(calc(1.11));
@@ -75,55 +113,122 @@
     height: auto;
     background-color: #4a5568;
     border: 1px solid white;
+
+    .committeesPageGridMobile {
+      display: grid;
+      grid-template-rows: 30vh auto;
+
+      .committeesWroldMapContainerMobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        margin-top: 6vh;
+        animation: mapFadeIn 3s ease-in 0s 1 forwards forwards;
+
+        .wordMapSvg {
+          transform: scale(calc(1.11));
+        }
+      }
+
+      .committeePageContainer {
+        margin-top: 1vh;
+        margin-bottom: 1vh;
+
+        .mobileTextContainer {
+          width: 90vw;
+
+          .committee-description-container {
+            padding: 3vw;
+            font-size: 15px;
+
+            .AFRO-Title {
+              font-size: 5vw;
+              font-weight: 600;
+            }
+
+            .AFRO-first-paragraph {
+              padding-top: 10px;
+              width: 100%;
+            }
+            .AFRO-image-container {
+              width: 84vw;
+              display: grid;
+              grid-template-rows: auto auto;
+
+              .AFRO-Image {
+                margin-top: 1vh;
+                width: 100%;
+                height: auto;
+              }
+            }
+
+            .AFRO-bullet-point-list-container {
+              margin-top: 0px;
+              .AFRO-bullet-point-list-title {
+                margin-top: 5px;
+                margin-bottom: 5px;
+              }
+
+              .AFRO-bullet-point-list {
+                margin-top: 5px;
+                .AFRO-bullet-point-list-item {
+                }
+              }
+            }
+
+            .signiture-container {
+              display: flex;
+              width: 84vw;
+              // gap: 5vw;
+              justify-content: center;
+              align-items: center;
+
+              .signiture-card {
+                display: flex;
+                align-items: center;
+                background-color: #4a5568;
+                padding: 2vw;
+                border-radius: 3vw;
+
+                .signiture-image {
+                  width: 10vw;
+                  height: 10vw;
+                  border-radius: 50%;
+                  border: 3px solid #1a202c;
+                }
+
+                .signiture-name {
+                  margin-left: 1vw;
+                  color: #bbc5d1;
+                  font-weight: 600;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .committeesPageGridMobileItem {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      @keyframes mapFadeIn {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+    }
   }
 
   .OxCenter {
     display: flex;
     justify-content: center;
-  }
-
-  .committeePageContainer {
-    margin-top: 1vh;
-    margin-bottom: 1vh;
-  }
-
-  .committeesPageGridMobile {
-    display: grid;
-    grid-template-rows: 30vh auto;
-    // border: 1px solid white;
-
-    .committeesWroldMapContainerMobile {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100vw;
-      margin-top: 6vh;
-      animation: mapFadeIn 3s ease-in 0s 1 forwards forwards;
-      // border: 1px solid white;
-
-      .wordMapSvg {
-        transform: scale(calc(1.11));
-        // border: 1px solid yellow;
-      }
-    }
-
-    .committeesPageGridMobileItem {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .mobileTextContainer {
-        margin: 2vw;
-      }
-    }
-
-    @keyframes mapFadeIn {
-      0% {
-        opacity: 0;
-      }
-      100% {
-        opacity: 1;
-      }
-    }
   }
 }
 
