home-page2 first iteration

--- a/src/pages/login/components/navbar/navbar-component.scss
+++ b/src/pages/login/components/navbar/navbar-component.scss
@@ -9,7 +9,7 @@
   transition-timing-function: ease-out;
   background-color: #1a202c;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  z-index: 2;
   .nav-bar-container-grid {
     display: grid;
     grid-template-columns: 1fr 4fr;
