--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@
   grid-template-rows: repeat(4, auto);
   background-color: #FFFFFF;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
